# postech-ml-challenge-fase-1

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
data/: Telco_customer_churn.xlsx  Telco_customer_churn_demographics.xlsx  Telco_customer_churn_services.xlsx
data/archive/: Telco_customer_churn.xlsx
docs/: ml_canvas.md
notebooks/: Analise_Exploratoria_Dados.ipynb  mlflow.db
notebooks/mlruns/2/models/m-92e505ec169a44ab8e999ea4f90c4b08/artifacts/: MLmodel  conda.yaml  model.pkl  python_env.yaml
src/: config.py  data.py  dataset_version.py  features.py  train_baselines.py
tests/: test_data.py  test_dataset_version.py  test_setup.py  test_training_smoke.py
